--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           an incredible community of smart and amazing people. ”</p>
       </div>
     </section>
-    <section class="card bg-white">
+    <section class="card bg-white card-kira">
       <div class="card__imagen">
         <img src="./images/image-kira.jpg" role="presentation" class="img">
         <div class="card__nombre">
