--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <section class="card bg-violeta">
       <div class="card__imagen">
+        <img src="./images/bg-pattern-quotation.svg" role="presentation" class="bg-pattern">
         <img src="./images/image-daniel.jpg" role="presentation" class="img">
         <div class="card__nombre">
           <span class="white">Daniel Clifford</span> <br>
